builder terminé (sauf plugin), commencé à tester la présentation. Ajouté plusieurs TODO's.

--- a/pom.xml
+++ b/pom.xml
@@ -84,24 +84,6 @@
                     </execution>
                 </executions>
             </plugin>
-
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.6.0</version>
-                <executions>
-                    <execution>
-                        <phase>install</phase>
-                        <goals>
-                            <goal>java</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <mainClass>presentation.Main</mainClass>
-                </configuration>
-            </plugin>
-
         </plugins>
     </build>
     <packaging>jar</packaging>
@@ -211,6 +193,11 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>19.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>RELEASE</version>
         </dependency>
 
 
