--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,10 @@
 language: java
-
-jdk:
-  - oraclejdk8
-
-addons:
-  apt:
-    packages:
-      - oracle-java8-installer
+jdk: oraclejdk8
+install: true
+script: ./mvnw clean install
 
 notifications:
   email: false
-
-
 
 deploy:
   provider: releases
