--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 jdk: oraclejdk12
 install: true
-script: ./mvn clean package
+script: ./mvn clean package -e
 
 notifications:
   email: false
