--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: java
 jdk:
   - openjdk8
-install: true
+  
+before_install:
+- sudo apt-get install -y openjfx
+
 script: mvn clean package -e
 
 notifications:
