--- a/pom.xml
+++ b/pom.xml
@@ -23,46 +23,48 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+            <!--
+                Packaging is broken (see issue #6 Github)
+                            <plugin>
+                                <groupId>org.apache.maven.plugins</groupId>
+                                <artifactId>maven-dependency-plugin</artifactId>
+                                <version>3.0.2</version>
+                                <executions>
+                                    <execution>
+                                        <id>copy-dependencies</id>
+                                        <phase>package</phase>
+                                        <goals>
+                                            <goal>copy-dependencies</goal>
+                                        </goals>
+                                        <configuration>
+                                            <outputDirectory>
+                                                ${project.build.directory}/lib/
+                                            </outputDirectory>
+                                        </configuration>
+                                    </execution>
+                                </executions>
+                            </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.0.2</version>
-                <executions>
-                    <execution>
-                        <id>copy-dependencies</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>copy-dependencies</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>
-                                ${project.build.directory}/lib/
-                            </outputDirectory>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.0.2</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>presentation.Main</mainClass>
-                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-                        </manifest>
-                        <manifestEntries>
-                            <Implementation-Build>$\{buildNumber}</Implementation-Build>
-                        </manifestEntries>
-                    </archive>
-                </configuration>
-            </plugin>
-
+                            <plugin>
+                                <groupId>org.apache.maven.plugins</groupId>
+                                <artifactId>maven-jar-plugin</artifactId>
+                                <version>3.0.2</version>
+                                <configuration>
+                                    <archive>
+                                        <manifest>
+                                            <addClasspath>true</addClasspath>
+                                            <classpathPrefix>lib/</classpathPrefix>
+                                            <mainClass>presentation.Main</mainClass>
+                                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                                        </manifest>
+                                        <manifestEntries>
+                                            <Implementation-Build>$\{buildNumber}</Implementation-Build>
+                                        </manifestEntries>
+                                    </archive>
+                                </configuration>
+                            </plugin>
+            -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>properties-maven-plugin</artifactId>
@@ -75,7 +77,6 @@
                         <configuration>
                             <properties>
                                 <property>
-                                    <!--Les propriétés système vont ici.-->
                                     <name>log4j.properties</name>
                                     <value>${project.build.directory}/classes/</value>
                                 </property>
@@ -87,6 +88,7 @@
         </plugins>
     </build>
     <packaging>jar</packaging>
+
 
     <dependencies>
         <dependency>
@@ -161,7 +163,6 @@
             <artifactId>guice-multibindings</artifactId>
             <version>4.1.0</version>
         </dependency>
-
         <dependency>
             <groupId>com.google.inject.extensions</groupId>
             <artifactId>guice-servlet</artifactId>
