remove old TODOs

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,5 @@
-#location=C:\\Users\\Mika\u00EBl\\Desktop\\textons\\test.txt
+#À changer pour le chemin du fichier graphe. Exemples dans les formats Windows et Unix.
+#Pourrait ne pas fonctionner avec des chemins comprenant des espaces ou des caractères accentués.
+#location=C:\\Users\\Mikael\\Desktop\\textons\\test.txt
 location=/home/mikael/textons/graph.json
 port=5555
